# CATE

./: CMakeLists.txt  README.md  _config.yml  cello.json  database.json  index.html  speech.json
2019/02/02/: audio-programming-in-c++.html
_layouts/: post.html
_posts/: 2019-02-03-audio-programming-in-c++.md  2019-02-10-handling-audio-file-database.md  2019-02-17-going-forwards-with-real-time-audio-analysis.md  2019-02-24-discrete-fourier-transforms-and-starting-qt-gui.md  2019-03-03-analysis-functionality-and-data-storage.md  2019-03-10-sliding-window-analysis-and-kd-tree.md  2019-03-17-implementing-simple-granular-synthesis.md  2019-03-24-expanding-upon-granular-synthesis.md  2019-03-31-structural-changes-and-working-on-GUI.md  2019-04-07-more-GUI-work.md  2019-04-14-finalising-some-features-and-starting-unit-testing.md  2019-04-21-lots-of-writing-and-not-much-progress.md  2019-04-28-overall-improvements-to-program.md  2019-05-05-many-improvements-and-more-testing.md  2019-05-12-final-post.md
_site/: 404.html  History.html  feed.xml  index.html
_site/2019/02/03/: audio-programming-in-c++.html
_site/2019/02/10/: handling-audio-file-database.html
_site/2019/02/17/: going-forwards-with-real-time-audio-analysis.html
_site/2019/02/24/: analysis-functionality-and-data-storage.html  discrete-fourier-transforms-and-starting-qt-gui.html
_site/2019/03/03/: analysis-functionality-and-data-storage.html
_site/2019/03/10/: sliding-window-analysis-and-kd-tree.html
_site/about/: index.html
cmake/: FindQwt.cmake
lib/: CMakeLists.txt
scripts/: analysis.py  env.py  plot.py  util.py
src/: AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioFile.cpp  AudioFile.hpp  AudioParameters.cpp  AudioParameters.hpp  AudioProcess.cpp  AudioProcess.hpp  CATE.cpp  CMakeLists.txt  Database.cpp  Database.hpp  FFT.cpp  FFT.hpp  FileTree.cpp  FileTree.hpp  MainWindow.cpp  MainWindow.hpp  Plot.cpp  Plot.hpp  RingBuffer.hpp  Synth.cpp  Synth.hpp  TAGS  Wave.cpp  Wave.hpp  Window.hpp  Worker.cpp  Worker.hpp
src/Analysis/: FFT.cpp  FFT.hpp  Feature.cpp  Feature.hpp  FeatureMap.cpp  FeatureMap.hpp  FeatureSet.cpp  FeatureSet.hpp  FeatureVector.cpp  FeatureVector.hpp  Math.hpp  SpectralFeature.cpp  SpectralFeature.hpp
src/Audio/: AnalysisWorker.cpp  AnalysisWorker.hpp  AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioFile.cpp  AudioFile.hpp  AudioProcess.cpp  AudioProcess.hpp  AudioRecorder.cpp  AudioRecorder.hpp  AudioSettings.cpp  AudioSettings.hpp  RecordWorker.cpp  RecordWorker.hpp  RingBuffer.cpp  RingBuffer.hpp  TestTone.cpp  TestTone.hpp  Util.cpp  Util.hpp
src/Corpus/: Corpus.cpp  Corpus.hpp  Entry.cpp  Entry.hpp  FileTree.cpp  KdTree.hpp  PathTree.cpp  PathTree.hpp  PointCloud.hpp
src/Database/: Database.cpp  Database.hpp  Entry.cpp  Entry.hpp  FileTree.cpp  FileTree.hpp  KdTree.hpp  PointCloud.hpp
src/GUI/: AudioSettingsWindow.cpp  AudioSettingsWindow.hpp  AudioSettingsWindow.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Plot.cpp  Plot.hpp  QtUtil.hpp  Util.hpp
src/Synthesis/: Envelope.cpp  Envelope.hpp  EnvelopeParams.cpp  EnvelopeParams.hpp  Grain.cpp  Grain.hpp  GrainParams.cpp  GrainParams.hpp  Granulator.cpp  Granulator.hpp  Rand.cpp  Rand.hpp  Scheduler.cpp  Scheduler.hpp  SequenceStrategy.cpp  SequenceStrategy.hpp  Source.cpp  Source.hpp  Util.cpp  Util.hpp
src/Util/: NonCopyable.hpp  Util.hpp
tests/: Analysis.cpp  Audio.cpp  Corpus.cpp  FileInputOutput.cpp  Synthesis.cpp  TestConstants.hpp  TestHeader.hpp  magspec.cpp
